--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.meetup">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MEETUP">
-        <activity android:name=".Interests.InterestsListActivity"></activity>
+        <activity android:name=".Activity.ChatActivity"></activity>
+        <activity android:name=".Interests.InterestsListActivity" />
         <activity android:name=".Register.LoginActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activity.MainActivity" />
         <activity android:name=".Register.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
